spade-tests/src/snapshots/spade_tests__ast_lowering__negative_pipeline_depth_is_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
assertion_line: 880
---
pipeline(-1) x() -> bool {
    true
}

error: Negative depth
  ┌─ testinput:1:10
  │
1 │ pipeline(-1) x() -> bool {
  │          ^^ Expected non-negative depth


